ctm-sf-homeloan-app/main/default/objects/Enum__c/Enum__c.object-meta.xml
<CustomObject>
    <label>Enum</label>
    <nameField>
        <label>Internal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>