ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/EnumType__c.field-meta.xml
<CustomField>
    <fullName>EnumType__c</fullName>
    <label>Enum Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APIKeyTypes</fullName>
            </value>
            <value>
                <fullName>ApplicationStatusCodes</fullName>
            </value>
            <value>
                <fullName>ApplicationTypes</fullName>
            </value>
            <value>
                <fullName>AssetPropertyIntention</fullName>
            </value>
            <value>
                <fullName>AssetSavingsAndDepositsType</fullName>
            </value>
            <value>
                <fullName>AssetSuperannuationType</fullName>
            </value>
            <value>
                <fullName>AssetTypes</fullName>
            </value>
            <value>
                <fullName>AssetVehicleType</fullName>
            </value>
            <value>
                <fullName>AustralianStates</fullName>
            </value>
            <value>
                <fullName>ConfidenceBands</fullName>
            </value>
            <value>
                <fullName>ConsolidatedDebtTypes</fullName>
            </value>
            <value>
                <fullName>ContactNumberTypes</fullName>
            </value>
            <value>
                <fullName>ContactPreferences</fullName>
            </value>
            <value>
                <fullName>ContributionsSourceOfFunds</fullName>
            </value>
            <value>
                <fullName>ContributionType</fullName>
            </value>
            <value>
                <fullName>CostTypes</fullName>
            </value>
            <value>
                <fullName>Countries</fullName>
            </value>
            <value>
                <fullName>CreditCardRepaymentTypes</fullName>
            </value>
            <value>
                <fullName>CreditInstitutions</fullName>
            </value>
            <value>
                <fullName>DebtTypes</fullName>
            </value>
            <value>
                <fullName>DocumentationTypes</fullName>
            </value>
            <value>
                <fullName>DocumentCategories</fullName>
            </value>
            <value>
                <fullName>DocumentStatuses</fullName>
            </value>
            <value>
                <fullName>EmploymentIndustries</fullName>
            </value>
            <value>
                <fullName
        >EmploymentOccupationsClericalOrAdministrativeWorker</fullName>
                <label
        >EmploymentOccupationsClericalOrAdministrativeWorker</label>
            </value>
            <value>
                <fullName
        >EmploymentOccupationsCommunityOrPersonalServicesWorker</fullName>
                <label
        >EmploymentOccupationsCommunityOrPersonalServicesWorker</label>
            </value>
            <value>
                <fullName>EmploymentOccupationsLabourer</fullName>
            </value>
            <value>
                <fullName
        >EmploymentOccupationsMachineryOperatorOrDriver</fullName>
                <label>EmploymentOccupationsMachineryOperatorOrDriver</label>
            </value>
            <value>
                <fullName>EmploymentOccupationsManager</fullName>
            </value>
            <value>
                <fullName>EmploymentOccupationsProfessional</fullName>
            </value>
            <value>
                <fullName>EmploymentOccupationsSalesWorker</fullName>
            </value>
            <value>
                <fullName
        >EmploymentOccupationsTechnicalOrTradeWorkers</fullName>
                <label>EmploymentOccupationsTechnicalOrTradeWorkers</label>
            </value>
            <value>
                <fullName>EmploymentRoles</fullName>
            </value>
            <value>
                <fullName>EmploymentSectors</fullName>
            </value>
            <value>
                <fullName>EmploymentTypes</fullName>
            </value>
            <value>
                <fullName>EntityTypes</fullName>
            </value>
            <value>
                <fullName>EquityReleaseReasons</fullName>
            </value>
            <value>
                <fullName>EquityReleaseTypes</fullName>
            </value>
            <value>
                <fullName>ErrorMessages</fullName>
            </value>
            <value>
                <fullName>ExpenseDebtDetailTypes</fullName>
            </value>
            <value>
                <fullName>ExpenseDebtTypes</fullName>
            </value>
            <value>
                <fullName>ExpenseLivingDetailTypes</fullName>
            </value>
            <value>
                <fullName>ExpenseLivingPropertyDetailTypes</fullName>
            </value>
            <value>
                <fullName>ExpenseLivingTypes</fullName>
            </value>
            <value>
                <fullName>ExpenseTypes</fullName>
            </value>
            <value>
                <fullName>FinancialSources</fullName>
            </value>
            <value>
                <fullName>GoodBadDisplay</fullName>
            </value>
            <value>
                <fullName>IdentificationTypes</fullName>
            </value>
            <value>
                <fullName>IdentityVerificationLevels</fullName>
            </value>
            <value>
                <fullName>IncomeEmploymentTypes</fullName>
            </value>
            <value>
                <fullName>IncomeGovernmentBenefitsType</fullName>
            </value>
            <value>
                <fullName>IncomeInvestmentType</fullName>
            </value>
            <value>
                <fullName>IncomeMaintenanceChildSupportType</fullName>
            </value>
            <value>
                <fullName>IncomeOtherType</fullName>
            </value>
            <value>
                <fullName>IncomeRentalType</fullName>
            </value>
            <value>
                <fullName>IncomeRetirementType</fullName>
            </value>
            <value>
                <fullName>IncomeTaxTypes</fullName>
            </value>
            <value>
                <fullName>IncomeTypes</fullName>
            </value>
            <value>
                <fullName>InterestTypes</fullName>
            </value>
            <value>
                <fullName>LiabilityCardRepaymentType</fullName>
            </value>
            <value>
                <fullName>LiabilityTypes</fullName>
            </value>
            <value>
                <fullName>LivingSituations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>