ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/FieldNameAPI__c.field-meta.xml
<CustomField>
    <fullName>FieldNameAPI__c</fullName>
    <label>Field Name API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>