ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/GlobalPicklistAPIName__c.field-meta.xml
<CustomField>
    <fullName>GlobalPicklistAPIName__c</fullName>
    <label>GlobalPicklistAPIName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>