ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>Object API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>