ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/SFPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>SFPicklistValue__c</fullName>
    <description
  >conversion value of the ENUM to be used in submission</description>
    <label>SF Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>