ctm-sf-homeloan-app/main/default/objects/Enum__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>