ctm-sf-homeloan-app/main/default/objects/Enum__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>EnumType__c</columns>
    <columns>DisplayName__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>